<resources>
    <string name="app_name">Guess</string>
    <string name="please_enter_a_number">Please enter a number(1-10)</string>
    <string name="ok">OK</string>
    <string name="yes_you_got_it">Yes, you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">smaller</string>
    <string name="dialog_title">Message</string>
    <string name="title_activity_material">Gress</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="number_lable">number:</string>
    <string name="cancel">Cancel</string>
    <string name="replay_game">Replay game</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_re_so_strong">You\'re so strong</string>
    <string name="number_is_count">number is %1d</string>
</resources>